--- a/csc372-hw/hw2/pie.html
+++ b/csc372-hw/hw2/pie.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Grandma's Lemon Meringue Pie</h1>
-    <img src="https://uncg.instructure.com/courses/138042/files/15960680/download?download_frd=1" alt="Lemon Meringue Pie">
+    <img src="https://media-hosting.imagekit.io//3666cd40f7e64312/pie-1.jpg?Expires=1832903097&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=wvar0fq19~Iro0y-10lReGEKzEi6pwxs6RtsvIUX2VZQKqEl9SUWhMdfcf7d60gCKjE45S748FTpPdCk8T~Y4-GRRLUChH7wroY76Chk6eyIVM3dPuBD~RFsWddw8HHfStR3QoYQNyYfvsVpfSFExqdGx1wl3VUe4T8vffj2I3JYUtbPPLgDMAQ6nqrXYR-u2qxuoQ9pR96Fgqj8PALgGQw3Rc7ga9KR2v9conIu6qXJqzv7Q-mXEjtUKnnct38B2ddaAEr0J4p69Noi19wHMrwlfTeqeRQ1I-GEaZSRJFGxRD52LjSfYzGpc8MRz-m~PcLa4wa9WcuSsX~Y2rhYVg__"
+        alt="Lemon Meringue Pie">
 
     <p>One 9-inch pie <br>
         30 Min - Prep time <br>
@@ -19,7 +20,7 @@
         8 Servings <br>
     </p>
     <hr>
-    <h2>Ingredients</h2>
+    <h2>INGREDIENTS</h2>
 
     <li> 1 cup white sugar</li>
     <li> 2 <abbr title="tablespoons">tbsp</abbr> all-purpose flour</li>
@@ -32,44 +33,68 @@
     <li> 1 (9 inch) pie crust, baked</li>
     <li> 4 egg whites</li>
     <li> 6 <abbr title="tablespoons">tbsp</abbr> white sugar </li>
+    <hr>
 
-
-    <h2>Directions</h2>
+    <h2>DIRECTIONS</h2>
 
     <ol>
         <li> <strong>Preheat Oven:</strong> Preheat oven to 350 degrees F (175 degrees C).</li>
         <li> <strong>Make Lemon Filling:</strong> In a medium saucepan ...</li>
-            <ul>    
-                <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
-                <li>Stir in water, lemon juice and lemon zest.</li>
-                <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
-                <li>Stir in butter.</li>
-                <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
-                <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
-                <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
-                <li>Remove from heat.</li>
-                <li>Pour filling into baked pastry shell.</li>
-            </ul>
+        <ul>
+            <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
+            <li>Stir in water, lemon juice and lemon zest.</li>
+            <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
+            <li>Stir in butter.</li>
+            <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+            <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
+            <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
+            <li>Remove from heat.</li>
+            <li>Pour filling into baked pastry shell.</li>
+        </ul>
         <li> <strong>Make Meringue:</strong> In a large glass or metal bowl ...</li>
-            <ul>
-                <li>Whip egg whites until foamy.</li>
-                <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
-                <li>Spread meringue over pie, sealing the edges at the crust.</li>
-            </ul>
+        <ul>
+            <li>Whip egg whites until foamy.</li>
+            <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
+            <li>Spread meringue over pie, sealing the edges at the crust.</li>
+        </ul>
         <li><strong>Bake: </strong> Bake in preheated oven for 10 minutes, or until meringue is golden brown.
         </li>
     </ol>
 
-    <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <del>cake</del> pie! </p>
+    <p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's
+        favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of
+        <del>cake</del> pie!
+    </p>
+    <hr>
 
-        <footer>
-        <a href="index.html">Home</a> |
-        <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie
-            recipes</a>
-        <pre>
-Copyright 2025 Granny's Pies
+    <h3>USER COMMENTS</h3>
+
+    <div>
+        <p style="font-style: italic;">This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with
+            cornstarch and flour in addition to egg yolks, and contains no milk.</p>
+        <p style="font-style: italic;"> - Emilie S.</p>
+    </div>
+    <div>
+        <p style="font-style: italic;">Q: What do you call an ape who loves pie?<br>
+            A: A meringue-utan.</p>
+        <p style="font-style: italic;">- Vickie K.</p>
+    </div>
+    <div>
+        <p style="font-style: italic;">This site can really <strong>engage</strong> my interest. Follow the recipe above and <strong>make it
+                so</strong>! This pie is <strong>number one</strong>.</p>
+        <p style="font-style: italic;">- Jean-Luc Picard</p>
+    </div>
+
+    <h4>LINKS</h4>
+    <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&start=10" style="color: A4A400;">Search for other lemon meringue pie
+        recipes</a> <br>
+    <a href="index.html" style="color: A4A400;">Home</a>
+
+    <pre>
+Copyright © 2012 Granny's Pies
+    A Granny's Pies Produciton
+           All rights reserved
         </pre>
-    </footer>
 </body>
 
 </html>
