testing hw folder path

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>My GitHub Pages Site!!</h1>
     <p>Temporary.</p>
-    <a href="csc372-hw/">Go to Homework Assignments</a>
+    <a href="csc372-hw/hw2">Go to Homework Assignments</a>
 </body>
 </html>
