--- a/csc372-hw/hw2/index.html
+++ b/csc372-hw/hw2/index.html
@@ -1,21 +1,35 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Granny's Pies</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <header>
-        <h1>Welcome to Granny's Pies</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="pie.html">Lemon Meringue Pie Recipe</a></li>
-        </ul>
-    </nav>
-    <section>
-        <p>Delicious homemade pies, crafted with love and tradition.</p>
-    </section>
+    <h1>Welcome to Granny's Pies</h1>
+    <hr>
+
+    <img src="https://www.harmonsgrocery.com/app/uploads/2022/09/RESIZED001345857656_Assorted_Fall_Pies.jpg
+" alt="Pie assortment">
+
+    <hr>
+
+    <ul>
+        <li><a href="pie.html" style="color:brown">Lemon Meringue Pie Recipe</a></li>
+        <li><a href="" style="color:brown">Apple Pie Recipe (coming soon!)</a></li>
+        <li><a href="" style="color: brown;">Blueberry Pie Recipe (coming soon!)</a></li>
+    </ul>
+
+    <hr>
+
+    <h1>More about me</h1>
+
+    <li>From Seattle, Washington</li>
+    <li>I have been baking for 10 years!</li>
+    <li>I love knitting!</li>
+
+
 </body>
+
 </html>
