fixed home, added victorsGarage

--- a/csc372-hw/index.html
+++ b/csc372-hw/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Assignments</h1>
+<ul>
+  <li><a href="hw2/">Assignment 1: Grannies Pies</a></li>
+  <li><a href="hw3/">Assignment 2: x</a></li>
+  <li><a href="hw3/">Assignment 3: x</a></li>
+
+</ul>
+
+<h1>Term Project</h1>
+
+</ul>
+    <li><a href="victorsGarage/">Term Project: Victor's Garage</a></li>
+</ul>
 </body>
 </html>
