--- a/csc372-hw/victorsGarage/index.html
+++ b/csc372-hw/victorsGarage/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-    <h1>My GitHub Pages Site!!</h1>
-    <p>Temporary design.</p>
-    <a href="csc372-hw/">Go to Homework Assignments</a>
+
+    <h1> Test </h1>
+
+    <div></div>
+
 </body>
+
 </html>
