added to victorsGarage

--- a/csc372-hw/victorsGarage/index.html
+++ b/csc372-hw/victorsGarage/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch+Pop&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
-    <h1> Test </h1>
+    <div class="container">
 
-    <div></div>
+    <div class="header">
+        <h2>Catalogue</h2>
+        <h1>Victor's Garage</h1>
+        <h3>Catalogue</h3>
+    </div>
+
+    <div class="small-blue">
+        
+        <p>Featured Cars</p>
+
+    </div>
+
+
+    <main>
+        <figure>
+        <img src="https://media-hosting.imagekit.io//3666cd40f7e64312/pie-1.jpg?Expires=1832903097&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=wvar0fq19~Iro0y-10lReGEKzEi6pwxs6RtsvIUX2VZQKqEl9SUWhMdfcf7d60gCKjE45S748FTpPdCk8T~Y4-GRRLUChH7wroY76Chk6eyIVM3dPuBD~RFsWddw8HHfStR3QoYQNyYfvsVpfSFExqdGx1wl3VUe4T8vffj2I3JYUtbPPLgDMAQ6nqrXYR-u2qxuoQ9pR96Fgqj8PALgGQw3Rc7ga9KR2v9conIu6qXJqzv7Q-mXEjtUKnnct38B2ddaAEr0J4p69Noi19wHMrwlfTeqeRQ1I-GEaZSRJFGxRD52LjSfYzGpc8MRz-m~PcLa4wa9WcuSsX~Y2rhYVg__"
+        alt="Lemon Meringue Pie">
+
+        </figure>
+        <figure>
+test
+
+        </figure>
+        
+    </main>
+
+</div>
 
 </body>
 
