testing home page changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>My GitHub Pages Site!!</h1>
-    <p>Temporary design.</p>
+    <p>Testing.</p>
     <a href="csc372-hw/">Go to Homework Assignments</a>
 </body>
 </html>
