progressed on term project

--- a/csc372-hw/victorsGarage/index.html
+++ b/csc372-hw/victorsGarage/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch+Pop&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Rubik+Glitch+Pop&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -15,33 +17,55 @@
 
     <div class="container">
 
-    <div class="header">
-        <h2>Catalogue</h2>
-        <h1>Victor's Garage</h1>
-        <h3>Catalogue</h3>
+        <div class="header">
+            <h2><a href="products.html">Catalogue</a></h2>
+            <h1>Victor's Garage</h1>
+            <h3><a href="#">Gallery</a></h3>
+        </div>
+
+        <div class="search">
+
+        </div>
+
+        <nav>
+            <p>Featured Cars</p>
+        </nav>
+
+
+        <main>
+            <figure>
+                <p>
+                    <img src='sources/1957ChevroletBelAir2DoorSedan.avif'
+                        alt="1957ChevroletBelAir2DoorSedan">
+                </p>
+            </figure>
+
+
+            <figure>
+                <p>
+                    <img src="sources/1990-Toyota-Supra-Gray.avif" alt="1990-Toyota-Supra-Gray">
+                </p>
+            </figure>
+
+            <figure>
+                <p>
+                    <img src="sources/2022-Mclaren-720S-Performance-Supernova-Silver.avif"
+                        alt="2022-Mclaren-720S-Performance-Supernova-Silver">
+                </p>
+            </figure>
+
+        </main>
+        <nav>
+            <p>Who we are:</p>
+        </nav>
+        <section>
+            <p>Victor's Garage is a group of highly skilled and experienced group of mechanics set on giving you the
+                best place to search and buy custom made cars from people like us.
+                We value...
+            </p>
+        </section>
+
     </div>
-
-    <div class="small-blue">
-        
-        <p>Featured Cars</p>
-
-    </div>
-
-
-    <main>
-        <figure>
-        <img src="https://media-hosting.imagekit.io//3666cd40f7e64312/pie-1.jpg?Expires=1832903097&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=wvar0fq19~Iro0y-10lReGEKzEi6pwxs6RtsvIUX2VZQKqEl9SUWhMdfcf7d60gCKjE45S748FTpPdCk8T~Y4-GRRLUChH7wroY76Chk6eyIVM3dPuBD~RFsWddw8HHfStR3QoYQNyYfvsVpfSFExqdGx1wl3VUe4T8vffj2I3JYUtbPPLgDMAQ6nqrXYR-u2qxuoQ9pR96Fgqj8PALgGQw3Rc7ga9KR2v9conIu6qXJqzv7Q-mXEjtUKnnct38B2ddaAEr0J4p69Noi19wHMrwlfTeqeRQ1I-GEaZSRJFGxRD52LjSfYzGpc8MRz-m~PcLa4wa9WcuSsX~Y2rhYVg__"
-        alt="Lemon Meringue Pie">
-
-        </figure>
-        <figure>
-test
-
-        </figure>
-        
-    </main>
-
-</div>
 
 </body>
 
