--- a/csc372-hw/victorsGarage/index.html
+++ b/csc372-hw/victorsGarage/index.html
@@ -35,8 +35,7 @@
         <main>
             <figure>
                 <p>
-                    <img src='sources/1957ChevroletBelAir2DoorSedan.avif'
-                        alt="1957ChevroletBelAir2DoorSedan">
+                    <img src='sources/1957ChevroletBelAir2DoorSedan.avif' alt="1957ChevroletBelAir2DoorSedan">
                 </p>
             </figure>
 
