--- a/csc372-hw/hw4/index.html
+++ b/csc372-hw/hw4/index.html
@@ -13,15 +13,15 @@
     <div id="game">
         <section id="player-throw">
             <div class="choices">
-                <img src='hw4sources/rock.png' id="rock" alt="rock" class="choice">
-                <img src='hw4sources/paper.png' id="paper" alt="paper" class="choice">
-                <img src='hw4sources/scissors.png'  id="scissors" alt="scissors" class="choice">
+                <img src='sources/rock.png' id="rock" alt="rock" class="choice">
+                <img src='sources/paper.png' id="paper" alt="paper" class="choice">
+                <img src='sources/scissors.png'  id="scissors" alt="scissors" class="choice">
             </div>
                 <h2>Your Throw</h2>
         </section>
 
         <section id="computer-throw">
-            <img src='hw4sources/question-mark.png' alt="Waiting..." id="computer-choice">
+            <img src='sources/question-mark.png' alt="Waiting..." id="computer-choice">
         </section>
         <h2>Computer's Throw</h2>
 
