hw page added hw5

--- a/csc372-hw/index.html
+++ b/csc372-hw/index.html
@@ -12,6 +12,8 @@
   <li><a href="hw3/">Assignment 2: x</a></li>
   <li><a href="hw3/">Assignment 3: x</a></li>
   <li><a href="hw4/">Assignment 4: Rock, Paper, Scissors</a></li>
+  <li><a href="hw5/">Assignment 5: GitHub Gallery</a></li>
+
 
 
 </ul>
