added scripts for github fetch

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <!-- TODO -->
                 <h1 class="name">Victor Wang</h1>
                 <!-- TODO -->
-                <h2 class="desc">Entry Level Xiaoying</h2>
+                <h2 class="desc">Entry Level X</h2>
                 <ul class="social list-inline">
                     <li class="list-inline-item">
                         <!-- TODO --> <a href="http://www.linkedin.com/">
@@ -85,6 +85,33 @@
                         </div>
                         <!--//content-->
                     </div>
+
+                    <section class="education section">
+                    <div class="section-inner">
+                        <h2 class="heading">Education</h2>
+                        <div class="content"></div>
+                        <!--//item-->
+                        <div class="item">
+                            <h3 class="title">
+                                <i class="fa fa-graduation-cap"></i>BSc Computer Science
+                                <!-- TODO --> <span class="university">University of Calgary</span> <span
+                                    class="year">(1977)</span>
+                            </h3>
+
+                            <h6 class="university">Relevant Classes:</h6>
+                            <ul>
+                                <li>Software Engineering</li>
+                                <li>Intro to Databases</li>
+                                <li>Data Structures and Algorithms</li>
+                                <li>Web Development</li>
+                                <li>Systems Programming</li>
+                            </ul>
+                        </div>
+
+                        <!--//content-->
+                    </div>
+                    <!--//section-inner-->
+                </section>
                     <!--//section-inner-->
                 </section>
                 <!--//section-->
@@ -144,33 +171,7 @@
                     <!--//section-inner-->
                 </section>
                 <!--//section-->
-                <section class="education section">
-                    <div class="section-inner">
-                        <h2 class="heading">Education</h2>
-                        <div class="content"></div>
-                        <!--//item-->
-                        <div class="item">
-                            <h3 class="title">
-                                <i class="fa fa-graduation-cap"></i>BSc Computer Science
-                                <!-- TODO --> <span class="university">University of Calgary</span> <span
-                                    class="year">(1977)</span>
-                            </h3>
-
-                            <h6 class="university">Relevant Classes:</h6>
-                            <ul>
-                                <li>Software Engineering</li>
-                                <li>Intro to Databases</li>
-                                <li>Data Structures and Algorithms</li>
-                                <li>Web Development</li>
-                                <li>Systems Programming</li>
-                            </ul>
-                        </div>
-
-                        <!--//content-->
-                    </div>
-                    <!--//section-inner-->
-                </section>
-
+                
             </div> <!--//primary-->
             <!--     // Aside-->
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
