--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,7 @@
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
     <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">    </script>
-    <!-- TODO --><script>new GitHubCalendar(".calendar", "YOUR GITHUB USERNAME", { responsive: true, global_stats: false });    </script>
+    <script>new GitHubCalendar(".calendar", "vwang99", { responsive: true, global_stats: false });    </script>
     <!-- custom js -->
     <script type="text/javascript" src="assets/js/main.js"></script>
 
