edited main page

--- a/index.html
+++ b/index.html
@@ -76,12 +76,7 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <!-- TODO -->
-                            <p> I have been solving problems in Java since I was but a suckling on my mother's bosom.
-                                I have a degree in Computer Science from a prestigious R1 university. (It's CMU!).
-                                Pls hire me, I literally need food. This is a template of dev portfolio. It is a work in
-                                progress. Slow
-                                progress. But progress nonetheless.
-                                Come back later for some updates and news! </p>
+                            <p> something about me </p>
                         </div>
                         <!--//content-->
                     </div>
@@ -94,17 +89,20 @@
                         <div class="item">
                             <h3 class="title">
                                 <i class="fa fa-graduation-cap"></i>BSc Computer Science
-                                <!-- TODO --> <span class="university">University of Calgary</span> <span
-                                    class="year">(1977)</span>
+                                <span class="university">University of North Carolina at Greensboro</span> <span
+                                    class="year">(2026)</span>
                             </h3>
 
-                            <h6 class="university">Relevant Classes:</h6>
+                            <h6 class="university">Relevant Coursework:</h6>
                             <ul>
                                 <li>Software Engineering</li>
-                                <li>Intro to Databases</li>
-                                <li>Data Structures and Algorithms</li>
+                                <li>System Programming</li>
                                 <li>Web Development</li>
-                                <li>Systems Programming</li>
+                                <li>Advanced Data Structures</li>
+                                <li>Principles of Database Systems</li>
+                                <li>Principles of Operating Systems (in-progress)</li>
+                                <li>Principles of Computer Security (in-progress)</li>
+                                <li>Algorithm Analysis and Design (in-progress)</li>
                             </ul>
                         </div>
 
@@ -121,10 +119,10 @@
                         <div class="content">
                             <div class="item" name="Job1">
                                 <!-- TODO -->
-                                <h3 class="title">Software Engineering Position <span class="place">
-                                        <a href="#">Company A</a>
+                                <h3 class="title">Computational Scientist Intern/Shadow <span class="place">
+                                        <a href="#">Innatrix</a>
                                     </span>
-                                    <span class="year">(2017-2021)</span>
+                                    <span class="year">(June 2024 - Oct 2024) (June 2025 - Aug 2025)</span>
                                 </h3>
                                 <p> • Participated in Agile software development through scrum sprint cycles, daily
                                     stand-up
@@ -146,25 +144,6 @@
                                     Platform.
                                 </p>
                             </div>
-                            <!--//item-->
-                            <div class="item" name="Job2">
-                                <h3 class="title">Software Engineering Position - <span class="place">
-                                        <a href="#">Company B</a>
-                                    </span>
-                                    <span class="year">(2011-2016)</span>
-                                </h3>
-                                <p> • Full stack development of proprietary 4-tier weather desktop application for
-                                    company-wide use.
-                                    <br>
-                                    • Work with software development, quality engineering (QE), and product management
-                                    teams
-                                    to design and
-                                    implement features and capabilities of desktop apps. <br>
-                                    • Develop and extend software tools which automate, analyze, and monitor steel
-                                    manufacturing
-                                    processes.
-                                </p>
-                            </div>
                         </div>
                         <!--//content-->
                     </div>
@@ -182,7 +161,7 @@
                             <ul class="list-unstyled">
                                 <li>
                                     <i class="fa fa-map-marker"></i>
-                                    <span class="sr-only">Location:</span>Greensboro, NC
+                                    <span class="sr-only">Location:</span>Durham, NC
                                 </li>
                                 <li>
                                     <i class="fa fa-envelope"></i>
