editing work experience

--- a/index.html
+++ b/index.html
@@ -33,18 +33,13 @@
                 <h2 class="desc">Entry Level X</h2>
                 <ul class="social list-inline">
                     <li class="list-inline-item">
-                        <!-- TODO --> <a href="http://www.linkedin.com/">
+                        <a href="https://www.linkedin.com/in/victor-wang99/">
                             <i class="fa fa-linkedin"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <!-- TODO --> <a href="#">
                             <i class="fa fa-github-alt"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <!-- TODO --> <a href="http://www.stackoverflow.com">
-                            <i class="fa fa-stack-overflow"></i>
                         </a>
                     </li>
                     <li class="list-inline-item last-item">
@@ -76,7 +71,7 @@
                         <h2 class="heading">About Me</h2>
                         <div class="content">
                             <!-- TODO -->
-                            <p> something about me </p>
+                            <p> An entry level computational scientist... </p>
                         </div>
                         <!--//content-->
                     </div>
@@ -124,24 +119,8 @@
                                     </span>
                                     <span class="year">(June 2024 - Oct 2024) (June 2025 - Aug 2025)</span>
                                 </h3>
-                                <p> • Participated in Agile software development through scrum sprint cycles, daily
-                                    stand-up
-                                    team
-                                    meetings, product planning and grooming sessions, and weekly sprint follow-up
-                                    reports.
+                                <p> • Participated the building of protien peptide database using public biological data. <br>
                                     <br>
-                                    • Developed RESTful Java Spring Boot applications using standardized, company-wide
-                                    software
-                                    development guidelines. <br>
-                                    • Successfully conducted API design and development of RESTful Services in 2 months,
-                                    enhancing
-                                    operations of the enterprise product in the business. <br>
-                                    • Performed unit testing of Spring Boot applications using JUnit, Hamcrest, and
-                                    Mockito.
-                                    <br>
-                                    • Followed the continuous integration Jenkins pipeline to deploy applications to
-                                    OpenShift Cloud
-                                    Platform.
                                 </p>
                             </div>
                         </div>
@@ -166,7 +145,7 @@
                                 <li>
                                     <i class="fa fa-envelope"></i>
                                     <span class="sr-only">Email:</span>
-                                    <!-- TODO --> <a href="mailto:james@website.com">James@website.com</a>
+                                    <a href="mailto:victxrw@gmail.com">victxrw@gmail.com</a>
                                 </li>
                                 <li>
                                     <i class="fa fa-link"></i>
